--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "@schematics/angular": "^12.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "updated": "^2.0.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
